deploy/k8s/app/comment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api-deployment
  labels:
    app: comment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-api
  template:
    metadata:
      labels:
        app: comment-api
      annotations:
        prometheus.io/scrape: "true"    # 放在 Pod template 的 annotations 中
        prometheus.io/port: "9091"      # 改成您实际暴露 metrics 的端口
    spec:
      serviceAccount: find-endpoints
      containers:
      - name: comment-api
        image: morningeatdinner/comment-api:039d25c
        ports:
        - containerPort: 8892
---
apiVersion: v1
kind: Service
metadata:
  name: comment-api-service
spec:
  selector:
    app: comment-api
  ports:
    - protocol: TCP
      port: 8892
      targetPort: 8892
      nodePort: 30892
  type: NodePort
