deploy/k8s/app/comment-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-rpc-deployment
  labels:
    app: comment-rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-rpc
  template:
    metadata:
      labels:
        app: comment-rpc
      annotations:
        prometheus.io/scrape: "true"    # 放在 Pod template 的 annotations 中
        prometheus.io/port: "9091"      # 改成您实际暴露 metrics 的端口
    spec:
      containers:
      - name: comment-rpc
        image: morningeatdinner/comment-rpc:039d25c
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: comment-rpc-service
spec:
  selector:
    app: comment-rpc
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
      nodePort: 30004
  type: NodePort
