deploy/k8s/app/community-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-api-deployment
  labels:
    app: community-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: community-api
  template:
    metadata:
      labels:
        app: community-api
    spec:
      serviceAccount: find-endpoints
      containers:
      - name: community-api
        image: morningeatdinner/community-api:42d5b90
        ports:
        - containerPort: 8890
---
apiVersion: v1
kind: Service
metadata:
  name: community-api-service
spec:
  selector:
    app: community-api
  ports:
    - protocol: TCP
      port: 8890
      targetPort: 8890
      nodePort: 30890  # 添加nodePort端口,范围必须在30000-32767之间
  type: NodePort      # 将类型改为NodePort
