deploy/k8s/app/community-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-rpc-deployment
  labels:
    app: community-rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: community-rpc
  template:
    metadata:
      labels:
        app: community-rpc
    spec:
      containers:
      - name: community-rpc
        image: morningeatdinner/community-rpc:42d5b90
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: community-rpc-service
spec:
  selector:
    app: community-rpc
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      nodePort: 30002
  type: NodePort
