deploy/k8s/app/post-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-rpc-deployment
  labels:
    app: post-rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-rpc
  template:
    metadata:
      labels:
        app: post-rpc
      annotations:
        prometheus.io/scrape: "true"    # 放在 Pod template 的 annotations 中
        prometheus.io/port: "9091"      # 改成您实际暴露 metrics 的端口
    spec:
      serviceAccount: find-endpoints
      containers:
      - name: post-rpc
        image: morningeatdinner/post-rpc:039d25c
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: post-rpc-service
spec:
  selector:
    app: post-rpc
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
      nodePort: 30003
  type: NodePort
