deploy/k8s/app/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: morningeatdinner/user-api:0c1a9fb
        ports:
        - containerPort: 8889
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8889
      nodePort: 30889  # 添加nodePort端口,范围必须在30000-32767之间
  type: NodePort      # 将类型改为NodePort
