deploy/k8s/app/user-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-rpc-deployment
  labels:
    app: user-rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-rpc
  template:
    metadata:
      labels:
        app: user-rpc
      annotations:
        prometheus.io/scrape: "true"    # 放在 Pod template 的 annotations 中
        prometheus.io/port: "9091"      # 改成您实际暴露 metrics 的端口
    spec:
      containers:
      - name: user-rpc
        image: morningeatdinner/user-rpc:039d25c
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-rpc-service
spec:
  selector:
    app: user-rpc
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30001
  type: NodePort
