deploy/k8s/app/vote-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-api-deployment
  labels:
    app: vote-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-api
  template:
    metadata:
      labels:
        app: vote-api
    spec:
      serviceAccount: find-endpoints
      containers:
      - name: vote-api
        image: morningeatdinner/vote-api:42d5b90
        ports:
        - containerPort: 8893
---
apiVersion: v1
kind: Service
metadata:
  name: vote-api-service
spec:
  selector:
    app: vote-api
  ports:
    - protocol: TCP
      port: 8893
      targetPort: 8893
      nodePort: 30893  # 添加nodePort端口,范围必须在30000-32767之间
  type: NodePort      # 将类型改为NodePort
