deploy/k8s/app/vote-mq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-mq-deployment
  labels:
    app: vote-mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-mq
  template:
    metadata:
      labels:
        app: vote-mq
    spec:
      serviceAccount: find-endpoints
      containers:
      - name: vote-mq
        image: morningeatdinner/vote-mq:3257c08
        ports:
        - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: vote-mq-service
spec:
  selector:
    app: vote-mq
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
  type: ClusterIP
