deploy/k8s/app/vote-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-rpc-deployment
  labels:
    app: vote-rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-rpc
  template:
    metadata:
      labels:
        app: vote-rpc
      annotations:
        prometheus.io/scrape: "true"    # 放在 Pod template 的 annotations 中
        prometheus.io/port: "9091"      # 改成您实际暴露 metrics 的端口
    spec:
      serviceAccount: find-endpoints
      containers:
      - name: vote-rpc
        image: morningeatdinner/vote-rpc:039d25c
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: vote-rpc-service
spec:
  selector:
    app: vote-rpc
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: ClusterIP
